--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -2,7 +2,7 @@
 
 
 <% if @book.errors.any? %>
-  <%= @book.errors.count %>件のエラーが発生しました
+  <%= @book.errors.count %>件のerrorsが発生しました
   <ul>
     <% @book.errors.full_messages.each do |message| %>
       <li><%= message %></li>
