--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,8 +1,7 @@
 <h1>Books</h1>
-<h1>投稿一覧</h1>
 
 <% if @book.errors.any? %>
-  <%= @book.errors.count %>件のエラーが発生しました
+  <%= @book.errors.count %>件のerrorsが発生しました
   <ul>
     <% @book.errors.full_messages.each do |message| %>
       <li><%= message %></li>
@@ -10,24 +9,35 @@
   </ul>
 <% end %>
 
-<% @books.each do |book| %>
+<table>
+  <thred>
+    <tr>
+      <th>Title</th>
+      <th>Body</th>
+      <th colspan="3"></th>
+    </tr>
+  </thred>
 
-  <p>title</p>
-  <span><%= book.title %></span>
+  <tbody>
+ <% @books.each do |book| %>
+ <tr>
+  <td><%=book.title %></td>
+  <td><%=book.body %></td>
 
-<% end %>
-<% @books.each do |book| %>
+  <td><%= link_to "show", book_path(book.id) %></td>
+  <td><%= link_to "edit", edit_book_path(book.id) %></td>
+  <td><%= link_to "delete", book_path(book.id), method: :delete, "data-confirm" => "本当に削除しますか？" %></td>
+
+ </tr>
+ <% end %>
+  </tbody>
+
+</table>
 
 
 
-  <p>body</p>
- <span>
-  <%= link_to book.title, book_path(book.id) %>
-  </span>
 
-<% end %>
 
-<table></table>
 
 <h2>New book</h2>
 <%= form_with model: @book do |f| %>
