--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -4,6 +4,6 @@
 <h2>本文</h2>
 <p><%= @book.body %></p>
 
-<%= link_to "編集", edit_book_path(@book.id) %>
+<%= link_to "edit", edit_book_path(@book.id) %>
+<%= link_to "back", books_path %>
 <%= link_to "削除", book_path(@book.id), method: :delete, "data-confirm" => "本当に削除しますか？" %>
-
