--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -26,7 +26,7 @@
 
   <td><%= link_to "show", book_path(book.id) %></td>
   <td><%= link_to "edit", edit_book_path(book.id) %></td>
-  <td><%= link_to "delete", book_path(book.id), method: :delete, "data-confirm" => "本当に削除しますか？" %></td>
+  <td><%= link_to "Destroy", book_path(book.id), method: :delete, "data-confirm" => "本当に削除しますか？" %></td>
 
  </tr>
  <% end %>
@@ -48,5 +48,5 @@
   <h4>本文</h4>
   <%= f.text_area :body %>
 
-  <%= f.submit '投稿' %>
+  <%= f.submit 'Create Book' %>
 <% end %>
